[package]
name = "hypr-im-popup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay-client-toolkit = "0.18.1"
wayland-client = "0.31.2"
wayland-protocols-misc = {version="0.2.0", features=["client"]}
